--- a/package.json
+++ b/package.json
@@ -6,9 +6,24 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.1.3",
+    "ext-name": "^5.0.0",
+    "firebase": "8.6.7",
+    "md5": "^2.3.0",
+    "mime": "^2.4.6",
+    "mime-types": "^2.1.27",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.0",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
